# content-tools

./: .gitignore  PROJECT_PLAN.md  episode3_full_with_transcript.html  package-lock.json  plan.conv  serve.py
_archived/: WORKFLOW_AUDIT.md
core/: __init__.py  (+4 more)
text-content-pipeline/: .coverage  2026-02_payload.json  2026-03_payload.json  2026-05_payload.json  2026-06_payload.json  2026-08_payload.json  2026-09_payload.json  DESIGN.md  IMPLEMENTATION.md  README.md  content-concept.conv  pyproject.toml  requirements.txt  tcp.py
text-content-pipeline/examples/: demo_with_subthemes.json  demo_without_subthemes.json
text-content-pipeline/outputs/plans/: 2026-02_plan.json  2026-03_plan.json  temp_payload.json
text-content-pipeline/src/: __init__.py
text-content-pipeline/src/ai_generator/: generator.py  prompts.py
text-content-pipeline/src/cli/: commands.py
text-content-pipeline/src/config/: defaults.py
text-content-pipeline/src/errors/: exceptions.py
text-content-pipeline/src/payload/: schema.py  validation.py
text-content-pipeline/src/pipeline/: orchestrator.py
text-content-pipeline/src/renderer/: __init__.py  html_renderer.py  template_builder.py
text-content-pipeline/src/slots/: enum.py  scheduler.py
text-content-pipeline/src/weekly_calendar/: resolver.py
text-content-pipeline/tests/: test_ai_generator.py  test_calendar_resolver.py  test_cli_commands.py  test_config_defaults.py  test_exceptions.py  test_html_renderer.py  test_orchestrator.py  test_payload.py  test_prompts.py  test_slot_enum.py  test_slot_scheduler.py  test_template_builder.py
(+205 files in other folders)
